# CurrencyRates

./: .gitignore  .gitmodules  CMakeLists.txt  apiKey.txt  currencies.h
app/: deamon.cpp  main.cpp
include/logger/: Log.h
include/project/: CurrentRates.h  FixerApiReader.h
src/: CMakeLists.txt  CurrentRates.cpp  FixerApiReader.cpp
tests/: CMakeLists.txt  testCurrentRate.cpp  testFixerApiReader.cpp
